--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,21 @@
+title: aaron's journey
+author:
+  name: GitHub User
+  email: aaron.olds+blog at gmail.com
+description: > # this means to ignore newlines until "show_excerpts:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+show_excerpts: false # set to true to show excerpts on the homepage
+
+# Minima date format
 theme: minima
 
 minima:
   skin: dark
+  date_format: "%b %-d, %Y"
+
+  # generate social links in footer
+  social_links:
+    twitter: AaronPOlds
+    github:  aaronolds  
