--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,10 @@
 title: aaron's journey
 author:
   name: GitHub User
-  email: aaron.olds+blog at gmail.com
+  email: aaron.olds+blog@gmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Learning ever day.
 show_excerpts: false # set to true to show excerpts on the homepage
-
-# Minima date format
-theme: minima
 
 minima:
   skin: dark
@@ -19,3 +14,10 @@ minima:
   social_links:
     twitter: AaronPOlds
     github:  aaronolds  
+
+# Build settings
+theme: minima
+
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
